--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -1,22 +1,22 @@
 ---
 title: May 5th, 2021
 ---
-## content ideas #[[insta content]]
-### Make Consistent content #capture
+## content ideas
+### Make Consistent content #capture #[[insta content]]
 #### why though?
 #### People know what to expect
 #### It makes it clear what value you provide
 #### In comparison
 #### Inconsistent messy timeline is confusing
 #### They don't know what to expect
-### don't worry over the competition #capture
+### don't worry over the competition #capture #[[insta content]]
 #### You serve a different audience
 #### Use the blue ocean strategy
 #### By knowing the key values of your brand
 #### You end with a powerfull combination
 #### Setting you apart and
 #### Making your competition irrelevant
-### You need a strategy #capture
+### You need a strategy #capture #[[insta content]]
 #### Doing things on whim or waiting when you get inspiration leads to a chaotic mix. Confusing your audience
 #### Having boundries and a system shields you from chaos
 #### Protecting what makes you unique from the sea of noise
