Logseq auto save

--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -21,7 +21,7 @@ title: May 5th, 2021
 #### Having boundries and a system shields you from chaos
 #### Protecting what makes you unique from the sea of noise
 #### This making uou stand out from others
-### Know thyself and know thy -enemy- audience #capture
+### Know thyself and know thy -enemy- audience #capture #[[insta content]]
 #### Your audience percieves things differently
 #### Some brands suit some audience better than others
 #### Every brand helps a specific audience
