Logseq auto save

--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -26,6 +26,7 @@ title: May 5th, 2021
 #### Some brands suit some audience better than others
 #### Every brand helps a specific audience
 #### Be different by knowing your audience
+#### And to do that know what you represent
 ## 3 wishes
 ### Achieve a Barakah lifestyle
 #### Absorb fard salah as my core value
