Logseq auto save

--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -85,7 +85,8 @@ title: May 4th, 2021
 ###### Making accomplishing goals like waking up for Salah or doing Tashahhud easier for the wider community
 ## Wait what ARE my principle values?
 ### Build Innovative solutions
-### Writing captivating educational stories
+### making thought leader content
+###
 ## I have my time guaranteed | #capture #moment
 ### After work
 ### during OBED
