--- a/journals/2021_05_04.md
+++ b/journals/2021_05_04.md
@@ -84,7 +84,7 @@ title: May 4th, 2021
 ###### Breaking complex concepts into simple ones for a laymen person
 ###### Making accomplishing goals like waking up for Salah or doing Tashahhud easier for the wider community
 ## Wait what ARE my principle values?
-###
+### Persue barakah lifestyle
 ### Build Innovative solutions
 ### making thought leader content
 ## I have my time guaranteed | #capture #moment
