--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -39,4 +39,5 @@ title: May 5th, 2021
 #### Grow mockup instagram brands
 #### 1 month for a case study
 #### Send proposals on upwork
-##
+## Might to do list
+### Just have a query for the next task
