Logseq auto save

--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -41,3 +41,4 @@ title: May 5th, 2021
 #### Send proposals on upwork
 ## Might to do list
 ### Just have a query for the next task
+### Maybe habe a function that
