--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -39,8 +39,8 @@ title: May 5th, 2021
 #### Grow mockup instagram brands
 #### 1 month for a case study
 #### Send proposals on upwork
-##
-## Might to do list #capture
-### Just have a query for the next task
-### Maybe habe a function that makes the next bullet into a next task after previous is done
-### Kinda like a formula
+## Zettl app idea
+### Might to do list #capture #[[app idea]]
+#### Just have a query for the next task
+#### Maybe habe a function that makes the next bullet into a next task after previous is done
+#### Kinda like a formula
