--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -44,3 +44,5 @@ title: May 5th, 2021
 #### Just have a query for the next task
 #### Maybe habe a function that makes the next bullet into a next task after previous is done
 #### Kinda like a formula
+### Might to list
+####
