Logseq auto save

--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -45,4 +45,5 @@ title: May 5th, 2021
 #### Maybe habe a function that makes the next bullet into a next task after previous is done
 #### Kinda like a formula
 ### Might to list
+#### Source:
 ####
