Logseq auto save

--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -44,6 +44,7 @@ title: May 5th, 2021
 #### Just have a query for the next task
 #### Maybe habe a function that makes the next bullet into a next task after previous is done
 #### Kinda like a formula
-### Might to list
-#### Source:
-#### A l
+### Might to list #capture
+#### Source: https://youtu.be/Bry8a_7b9aM
+#### A list of tasks that I can do
+#### A highlight which is the most important
