--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -42,7 +42,7 @@ title: May 5th, 2021
 ## Zettl app idea
 ### Might to do list #capture #[[app idea]]
 #### Just have a query for the next task
-#### Maybe habe a function that makes the next bullet into a next task after previous is done
+#### Maybe have a function that makes the next bullet into a next task after previous is done
 #### Kinda like a formula
 ### Might to list #capture
 #### Source: https://youtu.be/Bry8a_7b9aM
