Logseq auto save

--- a/journals/2021_05_05.md
+++ b/journals/2021_05_05.md
@@ -48,4 +48,4 @@ title: May 5th, 2021
 #### Source: https://youtu.be/Bry8a_7b9aM
 #### A list of tasks that I can do
 #### A highlight which is the most important
-##
+## read articles on how
