--- a/journals/2021_05_06.md
+++ b/journals/2021_05_06.md
@@ -5,4 +5,4 @@ title: May 6th, 2021
 ## 3 wishes
 ### Build zettl and salah time to-do apps
 ### Represent Barakah lifestyle
-### learn and build streamlined systems by growing Mockup brands
+### learn to grow brands & build streamlined systems by growing Mockup brands
