--- a/journals/2021_05_06.md
+++ b/journals/2021_05_06.md
@@ -2,7 +2,7 @@
 title: May 6th, 2021
 ---
 
-## 3 wishes
+3 wishes
 ### Build zettl and salah time to-do apps
 ### Represent Barakah lifestyle
 ### learn to grow brands & build streamlined systems by growing Mockup brands
