--- a/journals/2021_05_06.md
+++ b/journals/2021_05_06.md
@@ -3,6 +3,7 @@ title: May 6th, 2021
 ---
 
 3 wishes
-### Build zettl and salah time to-do apps
-### Represent Barakah lifestyle
+### Build zettl and salah time to
+### Replace bad habits and
+ifestyle
 ### learn to grow brands & build streamlined systems by growing Mockup brands
