--- a/journals/2021_05_06.md
+++ b/journals/2021_05_06.md
@@ -4,6 +4,6 @@ title: May 6th, 2021
 
 3 wishes
 ### Build zettl and salah time to
-### Replace bad habits and
+### Replace bad habits
 ifestyle
 ### learn to grow brands & build streamlined systems by growing Mockup brands
