Logseq auto save

--- a/journals/2021_05_06.md
+++ b/journals/2021_05_06.md
@@ -5,4 +5,5 @@ title: May 6th, 2021
 ### Build zettl and salah time to-do app (muslim dev)
 ### learn to grow brands & build streamlined systems by growing Mockup brands (agency)
 ## Flutter Projects
-###
+### Zettl visual
+#### lv 1 -
