--- a/journals/2021_05_06.md
+++ b/journals/2021_05_06.md
@@ -6,4 +6,5 @@ title: May 6th, 2021
 ### learn to grow brands & build streamlined systems by growing Mockup brands (agency)
 ## Flutter Projects
 ### Zettl visual
-#### lv 1 -
+#### lv 1 - Text with bullets without styling
+#### lv2 - add fonts and size
