Logseq auto save

--- a/journals/2021_05_06.md
+++ b/journals/2021_05_06.md
@@ -8,5 +8,5 @@ title: May 6th, 2021
 ### Zettl visual
 #### lv 1 - Text with bullets without styling
 #### lv2 - add fonts and size
-### Salah wallpaper
+### Salah to-do app
 ####
