--- a/journals/2021_05_06.md
+++ b/journals/2021_05_06.md
@@ -9,4 +9,5 @@ title: May 6th, 2021
 #### lv 1 - Text with bullets without styling
 #### lv2 - add fonts and size
 ### Salah to-do app
-####
+#### lv 1 - Text with containers with text
+#### lv 2 -
