--- a/journals/2021_05_06.md
+++ b/journals/2021_05_06.md
@@ -10,4 +10,4 @@ title: May 6th, 2021
 #### lv2 - add fonts and size
 ### Salah to-do app
 #### lv 1 - Text with containers with text
-#### lv 2 -
+#### lv 2 - Adding
