Logseq auto save

--- a/journals/2021_05_06.md
+++ b/journals/2021_05_06.md
@@ -11,4 +11,4 @@ title: May 6th, 2021
 ### Salah to-do app
 #### lv 1 - Text with containers with text
 #### lv 2 - Adding fonts
-#### lv 3 - adding cards and
+#### lv 3 - adding cards
