Logseq auto save

--- a/journals/2021_05_06.md
+++ b/journals/2021_05_06.md
@@ -6,9 +6,11 @@ title: May 6th, 2021
 ### learn to grow brands & build streamlined systems by growing Mockup brands (agency)
 ## Flutter Projects
 ### Zettl visual
-#### lv 1 - Text with bullets without styling
-#### lv2 - add fonts and text style (size)
+#### micard
+##### lv 1 - Text with bullets without styling
+##### lv2 - add fonts and text style (size)
 ### Salah to-do app
+#### mio
 #### lv 1 - Text with containers with text
 #### lv 2 - Adding fonts and text style (size)
 #### lv 3 - adding cards
