Logseq auto save

--- a/journals/2021_05_06.md
+++ b/journals/2021_05_06.md
@@ -10,7 +10,7 @@ title: May 6th, 2021
 ##### lv 1 - Text with bullets without styling
 ##### lv2 - add fonts and text style (size)
 ### Salah to-do app
-#### mio
-#### lv 1 - Text with containers with text
-#### lv 2 - Adding fonts and text style (size)
-#### lv 3 - adding cards
+#### micard
+##### lv 1 - Text with containers with text
+##### lv 2 - Adding fonts and text style (size)
+##### lv 3 - adding cards
