Logseq auto save

--- a/journals/2021_05_06.md
+++ b/journals/2021_05_06.md
@@ -7,6 +7,7 @@ title: May 6th, 2021
 ## Flutter Projects
 ### Zettl visual
 #### micard
+##### [[draws/2021-05-06-22-54-07.excalidraw]]
 ##### lv 1 - Text with bullets without styling
 ##### lv2 - add fonts and text style (size)
 ### Salah to-do app
