--- a/journals/2021_05_06.md
+++ b/journals/2021_05_06.md
@@ -2,7 +2,8 @@
 title: May 6th, 2021
 ---
 ## 3 wishes
-### Build zettl and salah time to-do app (muslim dev)
+###
+### Build zettl and salah time to-do apps (muslim dev)
 ### learn to grow brands & build streamlined systems by growing Mockup brands (agency)
 ## Flutter Projects
 ### Zettl visual
