Logseq auto save

--- a/journals/2021_05_11.md
+++ b/journals/2021_05_11.md
@@ -3,6 +3,6 @@ title: May 11th, 2021
 ---
 
 ## Content Ideas
-###
-### One of the biggest problems in marketing today is that too many brands are trying to say too much. One brand stands out because it always does less, and does it very, very well: Apple. #capture
+### Keep your message simpler #capture
+#### One of the biggest problems in marketing today is that too many brands are trying to say too much. One brand stands out because it always does less, and does it very, very well: Apple.
 ###
