--- a/journals/2021_05_11.md
+++ b/journals/2021_05_11.md
@@ -7,5 +7,6 @@ title: May 11th, 2021
 #### One of the biggest problems in marketing today is that too many brands are trying to say too much. One brand stands out because it always does less, and does it very, very well: Apple.
 ### Say meningfull stuff
 #### Less is more. Apple doesn't try to say everything. It says what matters, and says it very well. #capture
-### s
+### Stop trying to do everything
 #### Everyone loves a brand that knows what it’s good at, and does it. Apple is a perfect example. It doesn't need to do much - just wowing us with great products. This is exactly what you want to be as a brand. Stop trying to do everything – it shows in your marketing. Focus on your niche, do it well, and you'll succeed. #capture
+###
