--- a/journals/2021_05_11.md
+++ b/journals/2021_05_11.md
@@ -10,4 +10,4 @@ title: May 11th, 2021
 ### Stop trying to do everything
 #### Everyone loves a brand that knows what it’s good at, and does it. Apple is a perfect example. It doesn't need to do much - just wowing us with great products. This is exactly what you want to be as a brand. Stop trying to do everything – it shows in your marketing. Focus on your niche, do it well, and you'll succeed. #capture
 ## Brand 1
-###
+### I help Health brands
