Logseq auto save

--- a/journals/2021_05_11.md
+++ b/journals/2021_05_11.md
@@ -9,6 +9,8 @@ title: May 11th, 2021
 #### Less is more. Apple doesn't try to say everything. It says what matters, and says it very well. #capture
 ### Stop trying to do everything
 #### Everyone loves a brand that knows what it’s good at, and does it. Apple is a perfect example. It doesn't need to do much - just wowing us with great products. This is exactly what you want to be as a brand. Stop trying to do everything – it shows in your marketing. Focus on your niche, do it well, and you'll succeed. #capture
-## Brand 1
-### I help Health brands grow a community with simple content strategy
-###
+## Brand
+### Brand 1
+#### I help Health brands grow a community with simple content strategy
+### Brand 2
+####
