Logseq auto save

--- a/journals/2021_05_11.md
+++ b/journals/2021_05_11.md
@@ -13,4 +13,4 @@ title: May 11th, 2021
 ### Brand 1
 #### I help Health brands grow a community with simple content strategy
 ### Brand 2
-#### Helping
+#### Helping content creators be productive with simple systems
