--- a/journals/2021_05_11.md
+++ b/journals/2021_05_11.md
@@ -14,3 +14,6 @@ title: May 11th, 2021
 #### I help Health brands grow a community with simple content strategy
 ### Brand 2
 #### Helping content creators be productive with simple systems
+## I understand my problem #capture #reflect
+### I know what to do
+### yet when time comes I have an urge to indulge in dopamine
