Logseq auto save

--- a/journals/2021_05_11.md
+++ b/journals/2021_05_11.md
@@ -16,4 +16,9 @@ title: May 11th, 2021
 #### Helping content creators be productive with simple systems
 ## I understand my problem #capture #reflect
 ### I know what to do
-### yet when time comes I have an urge to indulge in dopamine
+### yet when time comes I have an urge to indulge in dopamine activities
+#### fiction
+#### imagination
+#### music
+#### etc
+###
