Logseq auto save

--- a/journals/2021_05_11.md
+++ b/journals/2021_05_11.md
@@ -21,4 +21,6 @@ title: May 11th, 2021
 #### imagination
 #### music
 #### etc
+### This distracts me from my work
+### and I end up feeling horrible when I'm finished with those activities
 ###
