Logseq auto save

--- a/journals/2021_05_11.md
+++ b/journals/2021_05_11.md
@@ -23,4 +23,4 @@ title: May 11th, 2021
 #### etc
 ### This distracts me from my work
 ### and I end up feeling horrible when I'm finished with those activities
-###
+### It's the lack of focus when I have my urges to handle
