--- a/journals/2021_05_11.md
+++ b/journals/2021_05_11.md
@@ -24,3 +24,5 @@ title: May 11th, 2021
 ### This distracts me from my work
 ### and I end up feeling horrible when I'm finished with those activities
 ### It's the lack of focus when I have my urges to handle
+## [[dain's course - instagram academy]]
+##
