--- a/journals/2021_05_11.md
+++ b/journals/2021_05_11.md
@@ -25,4 +25,5 @@ title: May 11th, 2021
 ### and I end up feeling horrible when I'm finished with those activities
 ### It's the lack of focus when I have my urges to handle
 ## [[dain's course - instagram academy]]
-##
+## I help people improve the qulity  of their lives
+### -> Coffe bean
