--- a/journals/2021_05_11.md
+++ b/journals/2021_05_11.md
@@ -26,4 +26,5 @@ title: May 11th, 2021
 ### It's the lack of focus when I have my urges to handle
 ## [[dain's course - instagram academy]]
 ## I help people improve the qulity  of their lives
-### -> Coffe bean
+### -> Coffe bean brand
+###
