Logseq auto save

--- a/journals/2021_05_11.md
+++ b/journals/2021_05_11.md
@@ -26,5 +26,5 @@ title: May 11th, 2021
 ### It's the lack of focus when I have my urges to handle
 ## [[dain's course - instagram academy]]
 ## I help brands that help people improve the quality of their lives grow online #capture
-### -> Cafe cofee bean brand
+### -> Cafe coffee bean brand
 ### ->
