Logseq auto save

--- a/journals/2021_05_11.md
+++ b/journals/2021_05_11.md
@@ -28,4 +28,5 @@ title: May 11th, 2021
 ## I help brands that help people improve the quality of their lives grow online #capture
 ### -> Coffee bean cafe brand
 ### -> Mental health
-##
+## My brand thoughts
+###
