--- a/journals/2021_05_11.md
+++ b/journals/2021_05_11.md
@@ -27,4 +27,7 @@ title: May 11th, 2021
 ## [[dain's course - instagram academy]]
 ## My brand thoughts
 ### How I do things
-####
+### Who I am
+#### I help brands that help people improve the quality of their lives grow online #capture
+##### -> Coffee bean cafe brand
+##### -> Mental health
