Logseq auto save

--- a/journals/2021_05_11.md
+++ b/journals/2021_05_11.md
@@ -29,8 +29,8 @@ title: May 11th, 2021
 ## My brand thoughts
 ### How I do things
 #### I mix nature-inspired design with fun educational stories #capture
-#### I interact with my fans like a human
-##### building meaningful connections #capture
+#### I interact with my fans like a human #capture
+##### building meaningful connections
 ### Who I am
 #### I help brands that help people improve the quality of their lives grow online #capture
 ##### -> Coffee bean cafe brand
