--- a/journals/2021_05_11.md
+++ b/journals/2021_05_11.md
@@ -28,7 +28,7 @@ title: May 11th, 2021
 ## [[dain's course - instagram academy]]
 ## My brand thoughts
 ### Who I am
-#### I help brands that help people improve the quality of their lives grow online #capture
+#### I help brands focused on "quality of life" grow online #capture
 ##### -> Coffee bean cafe brand
 ##### -> Mental health
 ### How I do things
