Logseq auto save

--- a/journals/2021_05_11.md
+++ b/journals/2021_05_11.md
@@ -35,4 +35,4 @@ title: May 11th, 2021
 #### I mix nature-inspired design with fun educational stories #capture
 #### I interact with my fans like a human #capture
 ##### building meaningful connections
-###
+### Thoughts #capture
