--- a/journals/2021_05_11.md
+++ b/journals/2021_05_11.md
@@ -31,8 +31,9 @@ title: May 11th, 2021
 #### I help brands focused on "quality of life" grow online #capture
 ##### -> Coffee bean cafe brand
 ##### -> Mental health
-### How I do things
+### What I do things
 #### I mix nature-inspired design with fun educational stories #capture
 #### I interact with my fans like a human #capture
 ##### building meaningful connections
-###
+### How
+####
