Logseq auto save

--- a/journals/2021_05_11.md
+++ b/journals/2021_05_11.md
@@ -36,4 +36,4 @@ title: May 11th, 2021
 #### I interact with my fans like a human #capture
 ##### building meaningful connections
 ### How
-#### /i ![2021_05_11_thechristosnikas_171733052_825894881606957_2005993759536535721_n.jpg](https://cdn.logseq.com/%2Fcee4eb30-69f5-47b6-8491-6aaad1269b574ce56661-f630-4206-98eb-f1cb8921077d2021_05_11_thechristosnikas_171733052_825894881606957_2005993759536535721_n.jpg?Expires=4774346002&Signature=Ssz5W3UqjPxELi6S88nG4bU0BVXJfAW2pMNdSPEquzv2Dunk9vWVwgnR~s0-ITBazruMhkUsKhPptZUjNaNEX-p~GTql7QSVjCR-~zu8HRBDbvjC8zCbKyH2-gl0nmVAmZNH67zOS3XYtXJwIXYrYhwY1C0oottcTwN2IygEGCgC0xWRm5uSM93dPqW9JiRCz4lPySOfV2XgDuo34gMfaRcZdReuyx9t-JCnS9Lzsenz6wvW5ymboTNgEJ-gRavaaXum9bF1J8iOfwBLPXppPI0GjOu9ny4fvCYYCcg6iSX2krRV~frsgHXYPB278EOEm-23~2Sy1XcemhAj6T2wfQ__&Key-Pair-Id=APKAJE5CCD6X7MP6PTEA) ma
+#### ![2021_05_11_thechristosnikas_171733052_825894881606957_2005993759536535721_n.jpg](https://cdn.logseq.com/%2Fcee4eb30-69f5-47b6-8491-6aaad1269b574ce56661-f630-4206-98eb-f1cb8921077d2021_05_11_thechristosnikas_171733052_825894881606957_2005993759536535721_n.jpg?Expires=4774346002&Signature=Ssz5W3UqjPxELi6S88nG4bU0BVXJfAW2pMNdSPEquzv2Dunk9vWVwgnR~s0-ITBazruMhkUsKhPptZUjNaNEX-p~GTql7QSVjCR-~zu8HRBDbvjC8zCbKyH2-gl0nmVAmZNH67zOS3XYtXJwIXYrYhwY1C0oottcTwN2IygEGCgC0xWRm5uSM93dPqW9JiRCz4lPySOfV2XgDuo34gMfaRcZdReuyx9t-JCnS9Lzsenz6wvW5ymboTNgEJ-gRavaaXum9bF1J8iOfwBLPXppPI0GjOu9ny4fvCYYCcg6iSX2krRV~frsgHXYPB278EOEm-23~2Sy1XcemhAj6T2wfQ__&Key-Pair-Id=APKAJE5CCD6X7MP6PTEA) ma
