--- a/journals/2021_05_11.md
+++ b/journals/2021_05_11.md
@@ -36,6 +36,6 @@ title: May 11th, 2021
 #### I interact with my fans like a human #capture
 ##### building meaningful connections
 ### How
-#### Make a simple post
-####
-####
+#### A simple plant post
+##### with the plant in the middle with text above
+#####
