Logseq auto save

--- a/journals/2021_05_11.md
+++ b/journals/2021_05_11.md
@@ -38,4 +38,4 @@ title: May 11th, 2021
 ### How
 #### A simple plant post
 ##### with the plant in the middle with text above
-#####
+##### ![2021_05_11_thechristosnikas_171733052_825894881606957_2005993759536535721_n.jpg](https://cdn.logseq.com/%2Fcee4eb30-69f5-47b6-8491-6aaad1269b57a6ac9f92-d430-4777-84ca-61800a080d352021_05_11_thechristosnikas_171733052_825894881606957_2005993759536535721_n.jpg?Expires=4774346408&Signature=Ow890zCdOJLputgtyhr2tG1RXo3YLT4qfN0uNleNbZ~2z4e8c3D1VJcKm~6xiDnRohTbEaiy0Ud6AIQc0cdvZcXYGXBPNBjI7GB3HjnlzenHLyU42hSfUjmJAbf729f2~V3fGrYb2BnTC9xIQyPGdt7YmJ9e6SVBAGdGgikFJtYJ8g9puedrEkuHjCg37WoC7ae8x~RC-ZciAWTvYZpF7dnWIpB4IgmrBnuG45SLT5fAwM3prErV9JJIruFMVs7bEdogWAB2fwHXCzYoYORCw~utEk3q1LgTMUzfKwO6YB5AyOxd1Lo-gYI6A1AAUvWCW79ElTCpqTLSeiBcYy8DCw__&Key-Pair-Id=APKAJE5CCD6X7MP6PTEA)
