--- a/journals/2021_05_12.md
+++ b/journals/2021_05_12.md
@@ -3,5 +3,5 @@ title: May 12th, 2021
 ---
 
 ## Content topics
-### Marketing, why keeping it simple and avoiding complexity is good
+### Marketing - why keeping it simple and avoiding complexity is good
 ###
