Logseq auto save

--- a/journals/2021_05_12.md
+++ b/journals/2021_05_12.md
@@ -4,5 +4,5 @@ title: May 12th, 2021
 
 ## Content topics
 ### Marketing - why keeping it simple and avoiding complexity is good
-### Content - How educational content helps you reputation
+### Content - How educational content helps your reputation
 ###
