Logseq auto save

--- a/journals/2021_05_12.md
+++ b/journals/2021_05_12.md
@@ -2,8 +2,9 @@
 title: May 12th, 2021
 ---
 
-## Content topics
-### Marketing - why keeping it simple and avoiding complexity is good
-### Content - How educational content helps your reputation
-### Community - How to be open and approachable to build a community
+## Brand thoughts
+### My brand content topics
+#### Marketing - why keeping it simple and avoiding complexity is good #capture
+#### Content - How educational content helps your reputation #capture
+#### Community - How to be open and approachable to build a community #capture
 ##
