Logseq auto save

--- a/journals/2021_05_12.md
+++ b/journals/2021_05_12.md
@@ -7,4 +7,5 @@ title: May 12th, 2021
 #### Marketing - why keeping it simple and avoiding complexity is good #capture
 #### Content - How educational content helps your reputation #capture
 #### Community - How to be open and approachable to build a community #capture
-##
+### What I do
+####
