Logseq auto save

--- a/journals/2021_05_12.md
+++ b/journals/2021_05_12.md
@@ -8,4 +8,4 @@ title: May 12th, 2021
 #### Content - How educational content helps your reputation #capture
 #### Community - How to be open and approachable to build a community #capture
 ### What I do
-#### I help Health brands grow a community with simple content strategy
+#### I help Health brands grow a community with simple open strategy
