--- a/journals/2021_05_12.md
+++ b/journals/2021_05_12.md
@@ -9,4 +9,4 @@ title: May 12th, 2021
 #### Community - How to be open and approachable to build a community #capture
 ### What I do
 #### I help Health brands grow a community with simple open strategy
-####
+#### Helping content creators be productive with simple systems
