Logseq auto save

--- a/journals/2021_05_12.md
+++ b/journals/2021_05_12.md
@@ -11,4 +11,5 @@ title: May 12th, 2021
 #### I help Health brands grow a community with simple open strategy
 #### Helping content creators be productive with simple systems
 ## Show don't tell
-### I notice that a lot of people share
+### I notice that a lot of people share content with bullet points
+#### They rarley make sence in practice
