Logseq auto save

--- a/journals/2021_05_12.md
+++ b/journals/2021_05_12.md
@@ -12,4 +12,5 @@ title: May 12th, 2021
 #### Helping content creators be productive with simple systems
 ## Show don't tell
 ### I notice that a lot of people share content with bullet points
-#### They rarley make sence in practice
+#### They rarely make sence in practice
+####
