Logseq auto save

--- a/journals/2021_05_12.md
+++ b/journals/2021_05_12.md
@@ -13,4 +13,5 @@ title: May 12th, 2021
 ## Show don't tell
 ### I notice that a lot of people share content with bullet points
 #### They rarely make sence in practice
+#### Harder to visualise in the real world
 ####
