Logseq auto save

--- a/journals/2021_05_12.md
+++ b/journals/2021_05_12.md
@@ -14,5 +14,6 @@ title: May 12th, 2021
 ### I notice that a lot of people share content with bullet points #capture
 #### They rarely make sence in practice
 #### Harder to visualise in the real world
-## Ai assisted note categorization
+##
+### AI assisted note categorization
 ### Like evernote be able to
