--- a/journals/2021_05_12.md
+++ b/journals/2021_05_12.md
@@ -14,6 +14,6 @@ title: May 12th, 2021
 ### I notice that a lot of people share content with bullet points #capture
 #### They rarely make sence in practice
 #### Harder to visualise in the real world
-##
-### AI assisted note categorization
-### Like evernote be able to
+## Zettl app ideas #[[zettl app]]
+### AI assisted note categorization #capture #[[app idea]]
+#### Like evernote, habe ai assist in
