Logseq auto save

--- a/journals/2021_05_12.md
+++ b/journals/2021_05_12.md
@@ -16,4 +16,6 @@ title: May 12th, 2021
 #### Harder to visualise in the real world
 ## Zettl app ideas #[[zettl app]]
 ### AI assisted note categorization #capture #[[app idea]]
-#### Like evernote, habe ai assist in
+#### Like evernote, habe ai assist in makong it easy to search for notes
+#### Like mimind auto tag the note
+#### ise graph ai with nlp to better
