Logseq auto save

--- a/journals/2021_05_12.md
+++ b/journals/2021_05_12.md
@@ -18,4 +18,4 @@ title: May 12th, 2021
 ### AI assisted note categorization #capture #[[app idea]]
 #### Like evernote, habe ai assist in makong it easy to search for notes
 #### Like mimind auto tag the note
-#### ise graph ai with nlp to better
+#### Use graph ai with nlp to better understand what tags to use
