Logseq auto save

--- a/journals/2021_05_12.md
+++ b/journals/2021_05_12.md
@@ -14,8 +14,8 @@ title: May 12th, 2021
 ### I notice that a lot of people share content with bullet points #capture
 #### They rarely make sence in practice
 #### Harder to visualise in the real world
-## Zettl app ideas #[[zettl app]]
-### AI assisted note categorization #capture #[[app idea]]
+## Zettl app ideas
+### AI assisted note categorization #capture #[[app idea]] #[[zettl app]]
 #### Like evernote, have ai assist in makong it easy to search for notes
 #### Like mimind auto tag the note
 #### Use graph AI with nlp to better understand what tags to use
