Logseq auto save

--- a/journals/2021_05_12.md
+++ b/journals/2021_05_12.md
@@ -12,6 +12,7 @@ title: May 12th, 2021
 #### Helping content creators be productive with simple systems
 ## Show don't tell
 ### I notice that a lot of people share content with bullet points #capture
+#### My personal opinion
 #### They rarely make sence in practice
 #### Harder to visualise in the real world
 ## Zettl app ideas
