Logseq auto save

--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -3,5 +3,5 @@ title: May 13th, 2021
 ---
 
 ## Keep your message simple and straight to the point
-### {{embed ((609bc98b-8e23-4741-921f-fc97616cb633)) }}
+### {{embed (()) }}
 ###
