--- a/journals/2021_05_11.md
+++ b/journals/2021_05_11.md
@@ -5,6 +5,9 @@ title: May 11th, 2021
 ## Content Ideas
 ### Keep your message simpler
 #### One of the biggest problems in marketing today is that too many brands are trying to say too much. One brand stands out because it always does less, and does it very, very well: Apple. #capture
+:PROPERTIES:
+:id: 609bc98b-c273-49c7-8f68-5b30330d53d9
+:END:
 ### Say meningfull stuff
 #### Less is more. Apple doesn't try to say everything. It says what matters, and says it very well. #capture
 :PROPERTIES:
