--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -3,4 +3,5 @@ title: May 13th, 2021
 ---
 
 ## Keep your message simple and straight to the point
-### {{embed ((onebof ))}}
+### {{embed ((609bc98b-c273-49c7-8f68-5b30330d53d9)) }}
+###
