--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -9,4 +9,5 @@ title: May 13th, 2021
 #### изготовление полистиролбетон
 ####
 #### Работаем без выходных
+#### Выезд с образцами/консультация - бесплатно.
 ####
