--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -4,7 +4,8 @@ title: May 13th, 2021
 
 ## Keep your message simple and straight to the point
 ### {{embed ((609bc98b-c273-49c7-8f68-5b30330d53d9)) }}
-###
+### Ninja way
+####
 ## Dad's work
 ### one
 #### изготовление полистиролбетон
