--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -5,6 +5,10 @@ title: May 13th, 2021
 ## Keep your message simple and straight to the point
 ### {{embed ((609bc98b-c273-49c7-8f68-5b30330d53d9)) }}
 ### Ninja way
+#### Master told 2 groups
+#### group a gets points when they hit the center
+#### group b on every landed and extra for the center
+#### After returning
 ####
 ## Dad's work
 ### one
