Logseq auto save

--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -9,7 +9,7 @@ title: May 13th, 2021
 #### group a gets points when they hit the center
 #### group b on every landed and extra for the center
 #### After returning
-####
+#### group a hit few and only when hit the center
 ## Dad's work
 ### one
 #### изготовление полистиролбетон
