--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -10,6 +10,8 @@ title: May 13th, 2021
 #### group b on every landed and extra for the center
 #### After returning
 #### group a hit few and only when hit the center
+##### they overanalyzed what worked
+#### group b hit everywhere but got more
 ## Dad's work
 ### one
 #### изготовление полистиролбетон
