--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -12,6 +12,9 @@ title: May 13th, 2021
 #### group a hit few and only when hit the center
 ##### they over-analyzed what worked
 #### group b hit everywhere but got more
+##### they honed their skills with practice and experimentation
+### My post
+####
 ## Dad's work
 ### one
 #### изготовление полистиролбетон
