Logseq auto save

--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -14,6 +14,8 @@ title: May 13th, 2021
 #### group b hit everywhere but got more
 ##### they honed their skills with practice and experimentation
 ### My post
+#### Oppo, meizu, poco, realme, honor
+#### vs Apple & Samsung
 ####
 ## Dad's work
 ### one
