--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -4,20 +4,20 @@ title: May 13th, 2021
 
 ## Keep your message simple and straight to the point
 ### {{embed ((609bc98b-c273-49c7-8f68-5b30330d53d9)) }}
-###
-### Ninja way
-#### Master told 2 groups
-#### group a gets points when they hit the center
-#### group b on every landed and extra for the center
-#### After returning
-#### group a hit few and only when hit the center
-##### they over-analyzed what worked
-#### group b hit everywhere but got more
-##### they honed their skills with practice and experimentation
-### My post
-#### Oppo, meizu, poco, realme, honor
-#### vs Apple & Samsung
-####
+### V1
+#### Ninja way
+##### Master told 2 groups
+##### group a gets points when they hit the center
+##### group b on every landed and extra for the center
+##### After returning
+##### group a hit few and only when hit the center
+###### they over-analyzed what worked
+##### group b hit everywhere but got more
+###### they honed their skills with practice and experimentation
+#### My post
+##### Oppo, meizu, poco, realme, honor
+##### vs Apple & Samsung
+#####
 ## Dad's work
 ### one
 #### изготовление полистиролбетон
