Logseq auto save

--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -14,7 +14,7 @@ title: May 13th, 2021
 ###### they over-analyzed what worked
 ##### group b hit everywhere but got more
 ###### they honed their skills with practice and experimentation
-##### Chris posts daily with experimentation
+##### Chris posts daily, experimenting and learning new ways
 #### My post
 ##### Oppo, meizu, poco, realme, honor
 ##### vs Apple & Samsung
