Logseq auto save

--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -19,7 +19,7 @@ title: May 13th, 2021
 ##### Oppo, meizu, poco, realme, honor
 ##### vs Apple & Samsung
 ##### v
-######
+###### better to make a post on -
 ## Dad's work
 ### one
 #### изготовление полистиролбетон
