--- a/journals/2021_05_12.md
+++ b/journals/2021_05_12.md
@@ -8,7 +8,8 @@ title: May 12th, 2021
 #### Content - How educational content helps your reputation #capture
 #### Community - How to be open and approachable to build a community #capture
 ### What I do
-#### I help Health brands grow a community with simple open strategy
+#### I help health brands grow and build their communities
+##### Couches, fitness, healthy products, etc
 #### Helping content creators be productive with simple systems
 ## Show don't tell
 ### I notice that a lot of people share content with bullet points #capture
