Logseq auto save

--- a/journals/2021_05_12.md
+++ b/journals/2021_05_12.md
@@ -10,7 +10,7 @@ title: May 12th, 2021
 ### What I do
 #### I help health brands grow and build their communities
 ##### Couches, fitness, healthy products, etc
-#### Helping content creators be productive with simple systems
+#### Helping content creators be output productive with simple systems
 ## Show don't tell
 ### I notice that a lot of people share content with bullet points #capture
 #### My personal opinion
