--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -19,7 +19,8 @@ title: May 13th, 2021
 ##### Oppo, meizu, poco, realme, honor
 ##### vs Apple & Samsung
 ##### v
-###### better to make a post on -
+###### better to make a post on - use a representative to do thy bidding
+####### enga
 ## Dad's work
 ### one
 #### изготовление полистиролбетон
