Logseq auto save

--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -20,7 +20,7 @@ title: May 13th, 2021
 ##### vs Apple & Samsung
 ##### v
 ###### better to make a post on - use a representative to do thy bidding
-####### enga
+####### engadget, linus tech tips, linus review
 ## Dad's work
 ### one
 #### изготовление полистиролбетон
