--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -4,11 +4,11 @@ title: May 13th, 2021
 
 ## Keep your message simple and straight to the point
 ### {{embed ((609bc98b-c273-49c7-8f68-5b30330d53d9)) }}
-### v1
+### v1 #capture #[[insta content]]
 ####
 ## Use a representative to do thy bidding
 ### engadget, linus tech tips, linus review
-### v1
+### v1 #capture #[[insta content]]
 ####
 ## Dad's work
 ### one
