--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -9,6 +9,9 @@ title: May 13th, 2021
 ## Use a representative to do thy bidding
 ### engadget, linus tech tips, linus review
 ### v1 #capture #[[insta content]]
+#### What do these brands in common?
+#### What about these?
+#### They have a representative whom people come back to
 ####
 ## Dad's work
 ### one
