--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -12,7 +12,7 @@ title: May 13th, 2021
 #### What do these brands in common?
 #### What about these?
 #### They have a representative whom people come back to
-####
+#### People love {name} for his laidback
 ## Dad's work
 ### one
 #### изготовление полистиролбетон
