--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -13,6 +13,10 @@ title: May 13th, 2021
 #### What about these?
 #### They have a representative whom people come back to
 #### People love {name} for his laidback
+## Know thy audience
+### I initially started with "apple/samsung vs the smartphone marketplace"
+### Than I realized it's not what my audience needs
+### Health and smarthpones?
 ###
 ## Dad's work
 ### one
