--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -16,7 +16,8 @@ title: May 13th, 2021
 ## Know thy audience
 ### I initially started with "apple/samsung vs the smartphone marketplace"
 ### Than I realized it's not what my audience needs
-### Health and smarthpones?
+### Health and smartphones?
+### Instead I thoughts what would a fitness couch want? or a eco oriented person want?
 ###
 ## Dad's work
 ### one
