--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -17,8 +17,10 @@ title: May 13th, 2021
 ### I initially started with "apple/samsung vs the smartphone marketplace"
 ### Than I realized it's not what my audience needs
 ### Health and smartphones?
-### Instead I thoughts what would a fitness couch want? or a eco oriented person want?
-###
+### Instead I thoughts what would a fitness couch want? or a Eco product brand be interested in?
+### An eco product?
+### Every ecommerce has trouble being authantic.
+### PErsonal brands blow them away in
 ## Dad's work
 ### one
 #### изготовление полистиролбетон
