--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -20,7 +20,11 @@ title: May 13th, 2021
 ### Instead I thoughts what would a fitness couch want? or a Eco product brand be interested in?
 ### An eco product?
 ### Every ecommerce has trouble being authantic.
-### PErsonal brands blow them away in
+### Personal brands blow them away in engagement and growth.
+### What to do?
+### Use a representative!
+### That's how my posts was made
+##
 ## Dad's work
 ### one
 #### изготовление полистиролбетон
