Logseq auto save

--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -14,16 +14,18 @@ title: May 13th, 2021
 #### They have a representative whom people come back to
 #### People love {name} for his laidback
 ## Know thy audience
-### I initially started with "apple/samsung vs the smartphone marketplace"
-### Than I realized it's not what my audience needs
-### Health and smartphones?
-### Instead I thoughts what would a fitness couch want? or a Eco product brand be interested in?
-### An eco product?
-### Every ecommerce has trouble being authantic.
-### Personal brands blow them away in engagement and growth.
-### What to do?
-### Use a representative!
-### That's how my posts was made
+###
+### v1
+#### I initially started with "apple/samsung vs the smartphone marketplace"
+#### Than I realized it's not what my audience needs
+#### Health and smartphones?
+#### Instead I thoughts what would a fitness couch want? or a Eco product brand be interested in?
+#### An eco product?
+#### Every ecommerce has trouble being authantic.
+#### Personal brands blow them away in engagement and growth.
+#### What to do?
+#### Use a representative!
+#### That's how my posts was made
 ##
 ## Dad's work
 ### one
