Logseq auto save

--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -15,7 +15,7 @@ title: May 13th, 2021
 #### People love {name} for his laidback
 ## Know thy audience
 ###
-### v1
+### v1 #capture #[[insta content]]
 #### I initially started with "apple/samsung vs the smartphone marketplace"
 #### Than I realized it's not what my audience needs
 #### Health and smartphones?
