Logseq auto save

--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -27,6 +27,10 @@ title: May 13th, 2021
 #### Use a representative!
 #### That's how my posts was made
 ##
+## I can capture notes but what about sketches?
+## I want to have a way to have the backlink power in my sketching app
+## The ability to organise notes with backlinks and tags is powerful
+###
 ## Dad's work
 ### one
 #### изготовление полистиролбетон
