--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -30,7 +30,10 @@ title: May 13th, 2021
 ### I can capture notes but what about sketches?
 ### I want to have a way to have the backlink power in my sketching app
 ### The ability to organise notes with backlinks and tags is powerful
-###
+### My workflow
+#### note
+##### just write a content idea in daily journal
+##### than see all the results in the capture tag with filtering
 ## Dad's work
 ### one
 #### изготовление полистиролбетон
