Logseq auto save

--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -32,8 +32,9 @@ title: May 13th, 2021
 ### The ability to organise notes with backlinks and tags is powerful
 ### My workflow
 #### note
-##### just write a content idea in daily journal
+##### just capture ideas in daily journal
 ##### than see all the results in the capture tag with filtering
+#####
 ## Dad's work
 ### one
 #### изготовление полистиролбетон
