--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -34,6 +34,8 @@ title: May 13th, 2021
 #### note
 ##### just capture ideas in daily journal
 ##### than see all the results in the capture tag with filtering
+##### insta content, app ideas, etc
+#### images
 #####
 ## Dad's work
 ### one
