Logseq auto save

--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -36,7 +36,11 @@ title: May 13th, 2021
 ##### than see all the results in the capture tag with filtering
 ##### insta content, app ideas, etc
 #### images
-#####
+##### just tagging them seems to work...
+##### Just tag with the type - insta, Yt, etc
+##### than add the post name to remmember by
+##### every sketch will be used for that only
+##### Now I feel silly
 ## Dad's work
 ### one
 #### изготовление полистиролбетон
