Logseq auto save

--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -26,7 +26,12 @@ title: May 13th, 2021
 #### What to do?
 #### Use a representative!
 #### That's how my posts was made
-## Backlinks in sketch note #capture #[[app idea]]
+## Backlinks in sketch note
+### Idea #capture #[[app idea]]
+#### sync tagged images to the tag within the zettl app
+#### all sketches are shown within the tag pages
+#### How?
+##### v1 - on the sidebar
 ### I can capture notes but what about sketches?
 ### I want to have a way to have the backlink power in my sketching app
 ### The ability to organise notes with backlinks and tags is powerful
