Logseq auto save

--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -31,7 +31,7 @@ title: May 13th, 2021
 #### sync tagged images to the tag within the zettl app
 #### all sketches are shown within the tag pages
 #### How?
-##### v1 - on the sidebar
+##### v1 - on the side but sidebar
 ### I can capture notes but what about sketches?
 ### I want to have a way to have the backlink power in my sketching app
 ### The ability to organise notes with backlinks and tags is powerful
