Logseq auto save

--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -31,8 +31,8 @@ title: May 13th, 2021
 #### sync tagged images to the tag within the zettl app
 #### all sketches are shown within the tag pages
 #### How?
-##### v1 - on the side but sidebar
-##### v2 - mixed with notes, everything ordered by date
+##### v1 - parallel to the main content body but not in sidebar
+##### THIS -> v2 - mixed with notes, everything ordered by date
 ###### An icon to show from what app everything is show
 ### I can capture notes but what about sketches?
 ### I want to have a way to have the backlink power in my sketching app
