--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -16,7 +16,7 @@ title: May 13th, 2021
 ## Know thy audience
 ###
 ### v1 #capture #[[insta content]]
-#### I initially started with " /embe "
+#### I initially started with " /re "
 #### Than I realized it's not what my audience needs
 #### Health and smartphones?
 #### Instead I thoughts what would a fitness couch want? or a Eco product brand be interested in?
