--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -3,6 +3,9 @@ title: May 13th, 2021
 ---
 
 ## Keep your message simple and straight to the point
+:PROPERTIES:
+:id: 609cb7a2-7057-4cb8-966d-fe164044fab0
+:END:
 ### {{embed ((609bc98b-c273-49c7-8f68-5b30330d53d9)) }}
 ### v1 #capture #[[insta content]]
 ####
@@ -16,7 +19,7 @@ title: May 13th, 2021
 ## Know thy audience
 ###
 ### v1 #capture #[[insta content]]
-#### I initially started with " /re "
+#### I initially started with ((609cb7a2-7057-4cb8-966d-fe164044fab0))
 #### Than I realized it's not what my audience needs
 #### Health and smartphones?
 #### Instead I thoughts what would a fitness couch want? or a Eco product brand be interested in?
