--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -12,7 +12,7 @@ title: May 13th, 2021
 ## Use a representative to do thy bidding
 ### engadget, linus tech tips, linus review
 ### v1 #capture #[[insta content]]
-#### What do these brands in common?
+#### What do these brands have in common?
 #### What about these?
 #### They have a representative whom people come back to
 #### People love {name} for his laidback
