--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -15,7 +15,8 @@ title: May 13th, 2021
 #### What do these brands have in common?
 #### What about these?
 #### They have a representative whom people come back to
-#### People love {name} for his laidback
+#### People love {name} for his laidback personality
+####
 ## Know thy audience
 ###
 ### v1 #capture #[[insta content]]
