Logseq auto save

--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -16,7 +16,7 @@ title: May 13th, 2021
 #### What about these?
 #### They have a representative whom people come back to
 #### People love {name} for his laidback personality
-####
+##### And
 ## Know thy audience
 ###
 ### v1 #capture #[[insta content]]
