--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -13,7 +13,7 @@ title: May 13th, 2021
 ### engadget, linus tech tips, linus review
 ### v1 #capture #[[insta content]]
 #### What do these  brands have in common?
-#### What about these?
+#### Do you see it?
 #### They have a representative whom people come back to
 #### People love {name} for his laidback personality
 #### And {name} for easy explanations
