Logseq auto save

--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -17,6 +17,7 @@ title: May 13th, 2021
 #### They have a representative whom people come back to
 #### People love {name} for his laidback personality
 #### And {name} for easy explanations
+#### Show consistent face to your audience
 ####
 ## Know thy audience
 ###
