--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -18,7 +18,7 @@ title: May 13th, 2021
 #### People love {name} for his laidback personality
 #### And {name} for easy explanations
 #### Show consistent face to your audience
-####
+#### You'll build their trust and
 ## Know thy audience
 ###
 ### v1 #capture #[[insta content]]
