Logseq auto save

--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -17,8 +17,9 @@ title: May 13th, 2021
 #### They have a representative whom people come back to
 #### People love {name} for his laidback personality
 #### And {name} for easy explanations
-#### Show consistent face to your audience
-#### You'll build their trust and
+#### Show a consistent face to your audience
+#### Building their trust and seeing boom in your brand engagement
+####
 ## Know thy audience
 ###
 ### v1 #capture #[[insta content]]
