--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -20,7 +20,7 @@ title: May 13th, 2021
 ####
 #### Building their trust and seeing boom in your brand engagement
 ####
-#### Have somebody
+#### Have somebody with a personality represent your brand
 ####
 ## Know thy audience
 ###
