--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -14,7 +14,8 @@ title: May 13th, 2021
 ### v1 #capture #[[insta content]]
 #### What do these  brands have in common?
 #### Do you see any similarities?
-#### They have a representative whom people come back to
+#### They have a representatives
+#### whom people come back to
 #### People love {name} for his laidback personality
 #### And {name} for easy explanations
 ####
