Logseq auto save

--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -15,14 +15,13 @@ title: May 13th, 2021
 #### What do these  brands have in common?
 #### Do you see any similarities?
 #### They have a representatives
-#### whom people come back to
+#### People come back to these brand because of them
 #### People love {name} for his laidback personality
 #### And {name} for easy explanations
-####
-#### Building their trust and seeing boom in your brand engagement
-####
 #### Have somebody with a personality represent your brand
-####
+#### This way people will be attracted to their personality
+#### coming back to your brand
+#### It could be your funny marketing buddy, iit could even be you
 ## Know thy audience
 ###
 ### v1 #capture #[[insta content]]
