--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -21,7 +21,7 @@ title: May 13th, 2021
 #### Have somebody with a personality represent your brand
 #### This way people will be attracted to their personality
 #### coming back to your brand
-#### It could be your funny marketing buddy,  I can even be you!
+#### It could be your funny marketing buddy,  it can even be you!
 ## Know thy audience
 ###
 ### v1 #capture #[[insta content]]
