--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -12,15 +12,9 @@ title: May 13th, 2021
 ## Use a representative to do thy bidding
 ### engadget, linus tech tips, linus review
 ### v1 #capture #[[insta content]]
-#### What do these  brands have in common?
-#### Do you see any similarities?
-#### They have a representatives
-#### People come back to these brand because of them
-#### People love {name} for his laidback personality
-#### And {name} for easy explanations
-#### Have somebody with a personality represent your brand
-#### This way people will be attracted to their personality
-#### coming back to your brand
+#### Have you noticed how personal brands get more engagement compared to ordinary brands?
+#### Ever wanted to achieve those results?
+#### Have a  represent your brand!
 #### It could be your funny marketing buddy,  it can even be you!
 ## Know thy audience
 ###
