Logseq auto save

--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -14,7 +14,8 @@ title: May 13th, 2021
 ### v1 #capture #[[insta content]]
 #### Have you noticed how personal brands get more engagement compared to ordinary brands?
 #### Ever wanted to achieve those results?
-#### Have a  represent your brand!
+#### Have a person represent your brand!
+####
 #### It could be your funny marketing buddy,  it can even be you!
 ## Know thy audience
 ###
