--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -15,6 +15,10 @@ title: May 13th, 2021
 #### Have you noticed how personal brands get more engagement compared to ordinary brands?
 #### Ever wanted to achieve those results?
 #### Have a person represent your brand!
+#### What do these brands have in common?
+##### - one dollar shave club, linus tech review, engadget
+#### You guessed it, a representative
+##### -
 ####
 #### It could be your funny marketing buddy,  it can even be you!
 ## Know thy audience
