Logseq auto save

--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -19,7 +19,8 @@ title: May 13th, 2021
 ##### - one dollar shave club, linus tech review, engadget
 #### You guessed it, a representative
 ##### -
-#### Find somebody to represent your bra
+#### Find somebody with a personality be the leader of your audience
+####
 #### It could be your funny marketing buddy,  it can even be you!
 ## Know thy audience
 ###
