--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -20,7 +20,8 @@ title: May 13th, 2021
 #### You guessed it, a representative
 ##### -
 #### Find somebody with a personality be the leader of your audience
-####
+#### They handle all the interaction with your audience
+#### while you can focus on making better products
 #### It could be your funny marketing buddy,  it can even be you!
 ## Know thy audience
 ###
