Logseq auto save

--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -12,8 +12,8 @@ title: May 13th, 2021
 ## Use a representative to do thy bidding
 ### engadget, linus tech tips, linus review
 ### v1 #capture #[[insta content]]
-#### Have you noticed how personal brands get more engagement compared to ordinary brands?
-####
+#### Ever wanted to gain the same amount of engagement as personal brands?
+#### Find a representative!
 #### What do these brands have in common?
 ##### - one dollar shave club, linus tech review, engadget
 #### You guessed it, a representative
