Logseq auto save

--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -20,8 +20,8 @@ title: May 13th, 2021
 ##### -
 #### They handle all the interaction with your audience
 #### while you can focus on making better products
-####
-#### it can even be you!
+#### A representative needs a personality, it could be your marketing buddy
+#### It can even be you!
 ## Know thy audience
 ###
 ### v1 #capture #[[insta content]]
