--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -19,9 +19,9 @@ title: May 13th, 2021
 #### You guessed it, a representative
 ##### -
 #### They handle all the interaction with your audience
-#### while you can focus on making better products
+#### while others can focus on making better products
 #### A representative needs a personality, it could be your marketing buddy
-#### It can even be you!
+#### Or can even be you!
 ## Know thy audience
 ###
 ### v1 #capture #[[insta content]]
