Logseq auto save

--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -19,7 +19,7 @@ title: May 13th, 2021
 #### You guessed it, a representative
 ##### -
 #### They handle all the interaction with your audience
-#### while others can focus on making better products
+#### while your team can focus on making better products
 #### A representative needs a personality, it could be your marketing buddy
 #### Or can even be you!
 ## Know thy audience
