Logseq auto save

--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -21,7 +21,7 @@ title: May 13th, 2021
 #### They handle all the interaction with your audience
 #### while your team can focus on making better products
 #### A representative needs a personality, it could be your marketing buddy
-#### Or can even be you!
+#### Or it can even be you!
 ## Know thy audience
 ###
 ### v1 #capture #[[insta content]]
