Logseq auto save

--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -60,6 +60,6 @@ title: May 13th, 2021
 ## Dad's work
 ### one
 #### изготовление полистиролбетон
-#### размеры - 60х30х20
+#### размеры - 60 30/20 30/10
 #### Работаем без выходных
 #### Выезд с образцами/консультация - бесплатно.
