--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -60,6 +60,6 @@ title: May 13th, 2021
 ## Dad's work
 ### one
 #### изготовление полистиролбетон
-#### размеры - 60x30x20 60x30x10
+#### размеры - 60x30x20, 60x30x10
 #### Работаем без выходных
-#### Выезд с образцами/консультация - бесплатно.
+#### Выезд с образцами/консультация - бесплатно
