--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -59,7 +59,7 @@ title: May 13th, 2021
 ##### Now I feel silly
 ## Dad's work
 ### one
-#### изготовление полистиролбетон
+#### изготовление полистиролбетона
 #### размеры - 60x30x20, 60x30x10
 #### Работаем без выходных
 #### Выезд с образцами/консультация - бесплатно
