--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -62,4 +62,4 @@ title: May 13th, 2021
 #### изготовление полистиролбетона
 #### размеры - 60x30x20, 60x30x10
 #### Работаем без выходных
-#### Выезд с образцами/консультация - бесплатно
+#### образци/консультация - бесплатно
