Logseq auto save

--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -12,6 +12,7 @@ title: May 13th, 2021
 ## Use a representative to do thy bidding
 ### engadget, linus tech tips, linus review
 ### v1 #capture #[[insta content]]
+#### Let somebody do thy bidding
 #### Ever wanted to gain the same amount of engagement as personal brands?
 #### Find a representative!
 #### What do these brands have in common?
