Logseq auto save

--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -10,6 +10,9 @@ title: May 13th, 2021
 ### v1 #capture #[[insta content]]
 ####
 ## Use a representative to do thy bidding
+:PROPERTIES:
+:id: 609cfebc-721b-4a26-951a-39a77fd5cbdb
+:END:
 ### engadget, linus tech tips, linus review
 ### v1 #capture #[[insta content]]
 #### Let somebody do thy bidding
