--- a/journals/2021_05_13.md
+++ b/journals/2021_05_13.md
@@ -8,7 +8,7 @@ title: May 13th, 2021
 :END:
 ### {{embed ((609bc98b-c273-49c7-8f68-5b30330d53d9)) }}
 ### v1 #capture #[[insta content]]
-####
+#### Apple vs other brands
 ## Use a representative to do thy bidding
 :PROPERTIES:
 :id: 609cfebc-721b-4a26-951a-39a77fd5cbdb
@@ -16,6 +16,9 @@ title: May 13th, 2021
 ### engadget, linus tech tips, linus review
 ### v1 #capture #[[insta content]]
 #### Let somebody do thy bidding
+:PROPERTIES:
+:id: 609cfebc-c3c3-410c-a6e8-b516d2b5f512
+:END:
 #### Ever wanted to gain the same amount of engagement as personal brands?
 #### Find a representative!
 #### What do these brands have in common?
