--- a/journals/2021_05_18.md
+++ b/journals/2021_05_18.md
@@ -3,4 +3,5 @@ title: May 18th, 2021
 ---
 
 ## YouTube zettl app
-### Open yoitibe video as
+### Open yoitibe video as feuture #capture #[[app idea]]
+####
