--- a/journals/2021_05_18.md
+++ b/journals/2021_05_18.md
@@ -4,4 +4,6 @@ title: May 18th, 2021
 
 ## YouTube zettl app
 ### Open yoitibe video as feuture #capture #[[app idea]]
-####
+#### Allow people to open yoitibe links withon the note app
+#### It reduces friction
+#### Exmap
