--- a/journals/2021_05_18.md
+++ b/journals/2021_05_18.md
@@ -6,4 +6,5 @@ title: May 18th, 2021
 ### Open yoitibe video as feuture #capture #[[app idea]]
 #### Allow people to open yoitibe links withon the note app
 #### It reduces friction
-#### Exmap
+#### Example worklflow
+####
