Logseq auto save

--- a/journals/2021_05_18.md
+++ b/journals/2021_05_18.md
@@ -7,4 +7,4 @@ title: May 18th, 2021
 #### Allow people to open yoitibe links withon the note app
 #### It reduces friction
 #### Example worklflow
-#####
+##### Saved
